@@ -192,6 +192,8 @@
     <string name="enable_iomx_summary">Improves performance, but may not work with all devices.</string>
     <string name="enable_time_stretching_audio">Time-stretching audio</string>
     <string name="enable_time_stretching_audio_summary">Speed up and slow down audio without changing the pitch (requires a fast device).</string>
+    <string name="enable_frame_skip">Enable frame skip</string>
+    <string name="enable_frame_skip_summary">Speed up decoding but could lower video quality.</string>
     <string name="deblocking">Deblocking filter settings</string>
     <string name="deblocking_summary">Change the deblocking filter settings. Could improve video quality. Advanced users only.</string>
     <string name="deblocking_always">Full deblocking (slowest)</string>
