@@ -53,6 +53,11 @@
             android:title="@string/deblocking"
             android:summary="@string/deblocking_summary" />
         <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="enable_frame_skip"
+            android:summary="@string/enable_frame_skip_summary"
+            android:title="@string/enable_frame_skip" />
+        <CheckBoxPreference
             android:key="enable_iomx"
             android:summary="@string/enable_iomx_summary"
             android:title="@string/enable_iomx" />
